config_eduroam_laptop/iptables-save
# Generated by iptables-save v1.4.21 on Mon Nov 16 17:15:29 2015
*raw
:PREROUTING ACCEPT [130440:30182439]
:OUTPUT ACCEPT [19074:6557812]
COMMIT
# Completed on Mon Nov 16 17:15:29 2015
# Generated by iptables-save v1.4.21 on Mon Nov 16 17:15:29 2015
*nat
:PREROUTING ACCEPT [108365:15393732]
:INPUT ACCEPT [2:124]
:OUTPUT ACCEPT [116:41946]
:POSTROUTING ACCEPT [321:20518]
:nat_clearnet - [0:0]
:nat_tor - [0:0]
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j nat_tor
-A nat_clearnet -p tcp -m multiport --dports 22 -m state --state NEW -j ACCEPT
-A nat_clearnet -d 131.159.198.38/19 -j ACCEPT
-A nat_tor -m owner --uid-owner 111 -j ACCEPT
-A nat_tor -p udp -m udp --dport 53 -j REDIRECT --to-ports 9053
-A nat_tor -j nat_clearnet
-A nat_tor -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
COMMIT
# Completed on Mon Nov 16 17:15:29 2015
# Generated by iptables-save v1.4.21 on Mon Nov 16 17:15:29 2015
*mangle
:PREROUTING ACCEPT [130440:30182439]
:INPUT ACCEPT [113542:27869749]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [19074:6557812]
:POSTROUTING ACCEPT [18955:6515710]
COMMIT
# Completed on Mon Nov 16 17:15:29 2015
# Generated by iptables-save v1.4.21 on Mon Nov 16 17:15:29 2015
*filter
:INPUT DROP [92357:13176705]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:filter_clearnet - [0:0]
:filter_tor - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 2/sec -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -p tcp -m multiport --dports 32335 -m state --state NEW -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 127.0.0.0/8 -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -j filter_tor
-A filter_clearnet -p tcp -m multiport --dports 22 -m state --state NEW -j ACCEPT
-A filter_clearnet -d 131.159.198.38/19 -j ACCEPT
-A filter_tor -m state --state INVALID -j DROP
-A filter_tor -m owner --uid-owner 111 -j ACCEPT
-A filter_tor -j filter_clearnet
-A filter_tor -m limit --limit 1/sec -j LOG --log-prefix "IPT: 4 OUTPUT filter REJECT: " --log-uid
-A filter_tor -m limit --limit 1/sec -j REJECT --reject-with icmp-port-unreachable
-A filter_tor -j DROP
COMMIT
# Completed on Mon Nov 16 17:15:29 2015
